# SearchDeck

./: Privacy.md  README.md  ToS.md  main.py  main.sh  pyproject.toml  ree.html  requirements.txt  scrapers.py
static/: style.css  text.css
static/application/: opensearch.xml
templates/: about.html  home.html  image.html  login.html  search.html  settings.html  signup.html  text.html
