[tool.poetry]
name = "searchdeck"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.6.3"
replit = "^3.0.0"
bs4 = "^0.0.1"
googlenews = "^1.5.7"
cchardet = "^2.1.7"
youtube-search = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
